[tool.poetry]
name = "nonergodicitygambling"
version = "0.1.0"
description = ""
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
manim = "^0.17.3"
numpy = "^1.24.3"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"
ipython = "^8.14.0"
# matplotlib = "numpy"
# ipykernel = "ipython"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
